# swerve_drive_robot_pkg

swerve_drive_robot/: CMakeLists.txt  package.xml
swerve_drive_robot_control/: CMakeLists.txt  package.xml
swerve_drive_robot_control/config/: controller_steering.yaml  controller_wheel.yaml
swerve_drive_robot_control/launch/: swerve_drive_robot_control.launch  swerve_drive_robot_gazebo.launch
swerve_drive_robot_control/rviz/: swerve_drive_robot.rviz
swerve_drive_robot_control/src/: swerve_drive_control.cpp
swerve_drive_robot_description/: CMakeLists.txt  package.xml
swerve_drive_robot_description/launch/: display.launch  simulation.launch
swerve_drive_robot_description/meshes/stl/: base.STL  steering.STL  wheel.STL
swerve_drive_robot_description/robot/: swerve_drive_robot.urdf.xacro
swerve_drive_robot_description/urdf/: color_palette.xacro  common.xacro
swerve_drive_robot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
swerve_drive_robot_description/urdf/swerve_drive/: steering.transmission.xacro  swerve_drive.gazebo.xacro  swerve_drive.urdf.xacro  wheel.transmission.xacro
